# github-standards

./: .config  .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-config.json  CODEOWNERS  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  example.pre-commit-config.yaml  keys.py  local.Dockerfile  opengrep.Dockerfile  package-lock.json  package.json  personal-data-exclusions.txt  presidio.py  pyproject.toml  recognizers-config.yml  requirements-dev.txt  ruff.toml  s3.tf  script.js  security_groups.tf  test.txt
.github/: dependabot.yml
.github/actions/: README.md
.github/actions/notify/: Readme.md
.github/actions/notify/message/: action.yml
.github/actions/notify/runtime-eol/: action.yml
.github/actions/runtime-eol/: Readme.md
.github/actions/update-ruleset-version/: .gitignore  README.md  action.yml  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: automated-release.yml  build-and-push-to-ecr.yml  build-and-push-to-ghcr.yml  build_and_push_to_ecr.yml  cd.yml  codeql.yml  common-ci.yml  create-release.yml  datadog-sca.yml  datadog-static-analysis.yml  org.common-ci.test.yml  org.common-ci.yml  org.common-scans.yml  org.docker-ci.yml  org.python-ci.yml  org.single-scan-ci.yml  org.terraform-ci.yml  pre-release.yml  prerelease.yml  python-ci.yml  python-vuln-audit.yml  release.yml  security.yml  test-build-workflow.yml  test.yml  trivy-pr-comment.tpl  update-ruleset.yml  validate-repos.yml  verify-pre-push-notes.yml  verify.yml
.github/workflows/org/: common-ci.yml  terraform-ci.yml
actions/: README.md
actions/doc/: diagram.drawio
actions/notify/: Readme.md
actions/notify/message/: action.yml
actions/notify/vulnerability/: action.yml
actions/python/: Readme.md
actions/upload-to-s3/: Readme.md  action.yml
actions/vulnerability-scan/python/: Readme.md  action.yml
actions/vulnerability-scan/upload-to-s3/: Readme.md  action.yml
docs/: FAQ.md  Installation.md
hooks/: run_security_scan.py  validate_security_scan.py
src/: cli.py  config.py  hooks_base.py  pre_push copy 5.py  pre_push.py
src/actions/: compare_versions.py
src/actions/compare_versions/: action.py
src/actions/update_ruleset_version/: action.py
src/hooks/: cli.py  config.py  hooks_base.py  run_personal_data_scan.py  run_pii_scan.py  run_security_scan.py  validate_security_scan.py
src/hooks/file_verification/: scanner.py
src/hooks/presidio/: engine_config.yaml  nlp_config.yaml  path_filter.py  recognizer_config.yaml  scanner.py  spacy_post_processing_recognizer.py
src/hooks/trufflehog/: scanner.py  vendors.py
src/proxy/: plugins.py
tests/: conftest.py  example.pre-commit-config.yaml  test_cli.py  test_hooks_base.py  test_validate_security_scan.py
tests/hooks/: test_cli.py  test_hooks_base.py  test_run_security_scan.py  test_validate_security_scan.py
tests/integration/: test_cli.py
tests/integration/hooks/: test_cli.py
tests/test_data/: COMMIT_MSG.txt  get_ruleset.json  personal_data.csv  personal_data.py  personal_data.txt  personal_data.yaml  pii.txt
tests/unit/actions/: test_compare_versions.py
tests/unit/hooks/: test_cli.py  test_hooks_base.py  test_run_personal_data_scan.py  test_run_security_scan.py  test_validate_security_scan.py
tests/unit/proxy/: test_plugins.py
tests/unit/trufflehog/: test_scanner.py  test_vendors.py
(+18 files in other folders)
