[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "github-standards"
description = "Hooks for use in a DBT development environment"
readme = "README.md"
keywords = ["pre-commit", "dbt", "hooks", "security"]
requires-python = ">=3.13"
dependencies = [
    "presidio-analyzer>=2.2.360",
    "proxy-py>=2.4.10",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "gitpython>=3.1.45",
    "prettytable>=3.17.0",
    "asyncio>=4.0.0",
    "anyio>=4.12.0",
    "aiohttp>=3.13.2",
]
version = "v1.3.0"

[project.scripts]
hooks-cli = "src.hooks.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.13.2",
    "pre-commit>=4.5.0",
    "pytest-cov>=5.0.0",
    "requests-mock>=1.12.1",
    "pytest-subprocess>=1.5.3",
    "setuptools-scm>=8",
    "pytest-aiohttp>=1.1.0",
]

# Presence enables setuptools-scm
[tool.setuptools_scm]

[tool.setuptools.package-data]
"*" = ["*.*"] # Make sure to include the yaml files

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

[tool.uv]
package = true
required-version = "==0.9.17"

[tool.ruff]
line-length = 125
indent-width = 4
target-version = "py312"
extend-select = ["T201"]

[tool.coverage.run]
omit = ['tests/*']

[tool.pytest]
anyio_mode = "auto"
